# transcript_mapper

./: README.rst  pyproject.toml
tests/: test_cli.py  test_transcript_mapper.py
tests/output/: expected.tsv
transcript_mapper/: cmd_map.py  mapper.py
