[tool.poetry]
name = "transcript_mapper"
version = "0.1.0"
description = "Translate transcript positions to their genomic counterparts"
authors = ["Pryce Turner <pryce.turner@gmail.com>"]

[tool.poetry.scripts]
map = "transcript_mapper.cmd_map:process_queries"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
